src/seqvars/aggregate/snapshots/varfish_server_worker__seqvars__aggregate__test__extract_pedigree.snap
---
source: src/seqvars/aggregate/mod.rs
expression: pedigree
---
PedigreeByName {
    individuals: {},
}
