src/seqvars/aggregate/snapshots/varfish_server_worker__seqvars__aggregate__test__extract_pedigree_snapshot-2.snap
---
source: src/seqvars/aggregate/mod.rs
expression: case_uuid
---
00000000-0000-0000-0000-000000000000
