src/seqvars/aggregate/snapshots/varfish_server_worker__seqvars__aggregate__test__extract_pedigree_snapshot.snap
---
source: src/seqvars/aggregate/mod.rs
expression: pedigree
---
PedigreeByName {
    individuals: {
        "Case_1_father-N1-DNA1-WGS1": Individual {
            family: "FAM",
            name: "Case_1_father-N1-DNA1-WGS1",
            father: None,
            mother: None,
            sex: Male,
            disease: Unaffected,
        },
        "Case_1_index-N1-DNA1-WGS1": Individual {
            family: "FAM",
            name: "Case_1_index-N1-DNA1-WGS1",
            father: Some(
                "Case_1_father-N1-DNA1-WGS1",
            ),
            mother: Some(
                "Case_1_mother-N1-DNA1-WGS1",
            ),
            sex: Female,
            disease: Affected,
        },
        "Case_1_mother-N1-DNA1-WGS1": Individual {
            family: "FAM",
            name: "Case_1_mother-N1-DNA1-WGS1",
            father: None,
            mother: None,
            sex: Male,
            disease: Unaffected,
        },
    },
}
