src/seqvars/aggregate/snapshots/varfish_server_worker__seqvars__aggregate__test__handle_record_snapshot-2.snap
---
source: src/seqvars/aggregate/mod.rs
expression: carriers
---
CarrierList {
    carriers: [
        Carrier {
            uuid: 00000000-0000-0000-0000-000000000000,
            index: 1,
            genotype: Het,
        },
        Carrier {
            uuid: 00000000-0000-0000-0000-000000000000,
            index: 2,
            genotype: Het,
        },
    ],
}
