src/seqvars/aggregate/snapshots/varfish_server_worker__seqvars__aggregate__test__handle_record_snapshot-3.snap
---
source: src/seqvars/aggregate/mod.rs
expression: counts
---
Counts {
    count_an: 6,
    count_het: 0,
    count_hom: 6,
    count_hemi: 0,
}
